testsuite/tests/typecheck/should_fail/tcfail113.stderr

tcfail113.hs:12:7: error:
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type signature: f :: [Maybe]

tcfail113.hs:15:8: error:
    • Expected kind ‘* -> *’, but ‘Int’ has kind ‘*’
    • In the first argument of ‘T’, namely ‘Int’
      In the type signature: g :: T Int

tcfail113.hs:18:6: error:
    • Expected kind ‘* -> *’, but ‘Int’ has kind ‘*’
    • In the type signature: h :: Int Int
